# advent-of-code-2022-stm32

./: Cargo.toml  README.md  rust-toolchain.toml  send.py
src/: main.rs
